# dvr

./: .gitignore  ANALYSIS.md  BUILDCHAIN_PLAN.md  CHECKLIST.md  EXECUTION_PLAN.md  JULES_HANDOFF.md  LOG.md  PLAN.md  README.md  USER_STORIES.md  build_os.sh  claude.txt  deploy.sh  generate_preview.sh  generate_screenshots.sh  index.html  patch_gallery.sh  patch_play.sh  patch_sample.sh  patch_tags.sh  plan.md  resolve.py  resolve2.py  resolve3.py  resolve5.py  resolve7.py  test.rs  test_keys.py
.agents/: AGENTS.md
.github/workflows/: build-image.yml  build-os.yml  ci.yml
docs/: index.html
done_plans/: EXECUTION_PLAN_1.md
dvr_app/: Cargo.toml
dvr_app/src/: main.rs  main.rs.orig  storage.rs
dvr_app/ui/: main.slint
pi-gen/: README.md  build.sh  config
pi-gen/stage-dvr/: EXPORT_IMAGE  prerun.sh
pi-gen/stage-dvr/00-packages-nr/: 00-packages-nr
pi-gen/stage-dvr/01-system/: 00-run.sh
pi-gen/stage-dvr/02-app/: 00-run.sh
pi-gen/stage-dvr/03-provision/: 00-run.sh
pi-gen/stage-dvr/03-provision/files/: dvr-config-save.sh  dvr-provision.service  dvr-provision.sh  dvr-wifi-restore.service
pi-gen/stage-dvr/04-slim/: 00-run.sh
pi-gen/stage-dvr/05-kernel-slim/: 00-run.sh
setup/: asound.conf  cmdline.txt  config.txt  dvr-sudoers  dvr-wifi-restore.sh  dvr-wifi-save.sh  install.sh  readonly.sh  tc358743.sh  wpa_supplicant.conf
src/: app.py  main.py  pipeline.py  storage.py  stubs.py  system.py  wifi.py
systemd/: dvr.service  tc358743.service
tests/: test_app.py  test_storage.py  test_stubs.py  test_system.py  test_wifi.py
