[package]
name = "dvr_app"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = { version = "1.5.0", features = ["backend-linuxkms"] }
gstreamer = "0.22.0"
gstreamer-video = "0.22.0"
gstreamer-app = "0.22.0"
gstreamer-pbutils = "0.22.0"
tokio = { version = "1.37.0", features = ["full"] }
sysinfo = "0.30.11"
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.38"
anyhow = "1.0.82"
futures = "0.3.30"

[build-dependencies]
slint-build = "1.5.0"

[dev-dependencies]
tempfile = "3.10.1"
